--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [project]
-name = "medical-image-segmentation"
-version = "1.0.0"
-description = "Medical image segmentation using U-Net architectures for multi-expert annotated datasets"
+name = "medtech-ai-security"
+version = "1.1.0"
+description = "AI-powered medical device cybersecurity: threat intelligence, vulnerability detection, and adversarial ML"
 readme = "README.md"
 authors = [
     { name = "David Dashti", email = "david.dashti@hermesmedical.com" }
 ]
 requires-python = ">=3.10"
 dependencies = [
+    # Core ML/AI (from biomedical foundation)
     "tensorflow>=2.13.0",
     "numpy>=1.24.0",
     "scipy>=1.11.0",
@@ -16,8 +17,23 @@ dependencies = [
     "simpleitk>=2.3.0",
     "scikit-image>=0.21.0",
     "tqdm>=4.66.0",
+    # Security/Threat Intelligence (Phase 1)
+    "requests>=2.31.0",
+    "beautifulsoup4>=4.12.0",
+    # ML Risk Scoring (Phase 2)
+    "scikit-learn>=1.3.0",
+    "pandas>=2.0.0",
+    "joblib>=1.3.0",
 ]
-keywords = ["deep-learning", "medical-imaging", "segmentation", "u-net", "tensorflow"]
+keywords = [
+    "medical-device",
+    "cybersecurity",
+    "threat-intelligence",
+    "vulnerability-detection",
+    "adversarial-ml",
+    "deep-learning",
+    "medical-imaging",
+]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
@@ -45,10 +61,15 @@ notebooks = [
 medseg-train = "med_seg.scripts.train:main"
 medseg-evaluate = "med_seg.scripts.evaluate:main"
 medseg-inference = "med_seg.scripts.inference:main"
+# Security CLI tools
+medsec-nvd = "medtech_ai_security.threat_intel.nvd_scraper:main"
+medsec-cisa = "medtech_ai_security.threat_intel.cisa_scraper:main"
+medsec-enrich = "medtech_ai_security.threat_intel.claude_processor:main"
+medsec-risk = "medtech_ai_security.ml.risk_scorer:main"
 
 [project.urls]
-Homepage = "https://github.com/Dashtid/medical-image-segmentation"
-Repository = "https://github.com/Dashtid/medical-image-segmentation"
+Homepage = "https://github.com/Dashtid/medtech-ai-security"
+Repository = "https://github.com/Dashtid/medtech-ai-security"
 
 [build-system]
 requires = ["uv_build>=0.9.0,<0.10.0"]
