feat: implement Phase 4 adversarial ML testing for medical AI security
Add comprehensive adversarial robustness testing framework:

Attacks (attacks.py):
- FGSM (Fast Gradient Sign Method) - single-step attack
- PGD (Projected Gradient Descent) - iterative attack
- C&W L2 (Carlini & Wagner) - optimization-based attack
- Support for both Keras and non-Keras models
- Fast random direction gradient estimation for non-TF models

Defenses (defenses.py):
- JPEG compression defense
- Bit-depth reduction
- Gaussian blur / spatial smoothing
- Feature squeezing (combined defenses)
- Ensemble defense with voting
- Adversarial example detection
- Adversarial training support

Evaluation (evaluator.py):
- Clean and robust accuracy metrics
- Attack success rate measurement
- Defense effectiveness assessment
- Clinical impact assessment (false negatives = CRITICAL)
- Automated defense recommendations
- Full robustness report generation
- CLI tool: medsec-adversarial

Based on 2025 research showing medical AI models are MORE
vulnerable to adversarial attacks than natural image models.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,8 @@ medsec-risk = "medtech_ai_security.ml.risk_scorer:main"
 # Anomaly Detection CLI tools (Phase 3)
 medsec-traffic-gen = "medtech_ai_security.anomaly.traffic_generator:main"
 medsec-anomaly = "medtech_ai_security.anomaly.detector:main"
+# Adversarial ML CLI tools (Phase 4)
+medsec-adversarial = "medtech_ai_security.adversarial.evaluator:main"
 
 [project.urls]
 Homepage = "https://github.com/Dashtid/medtech-ai-security"
