feat: implement Phase 5 SBOM analysis with Graph Neural Networks
Add comprehensive SBOM supply chain security analysis module:

Parser (parser.py):
- CycloneDX JSON/XML format support
- SPDX JSON/Tag-Value format support
- Automatic format detection
- Vulnerability extraction and enrichment
- Package and dependency relationship extraction

Graph Builder (graph_builder.py):
- Dependency graph to GNN representation
- Node features: name embeddings, version, package type, vulnerabilities
- Edge features: dependency type (direct, transitive, dev)
- Depth and position computation
- Vulnerability label generation

GNN Model (gnn_model.py):
- Graph Convolutional Network (GCN) layers
- Graph Attention Network (GAT) layers
- Node classification for vulnerability prediction
- Support for both Keras and non-Keras models
- Simple fallback classifier when TensorFlow unavailable

Risk Scorer (risk_scorer.py):
- Weighted risk scoring (vulnerability, license, dependency, position)
- Medical device license compliance (GPL, AGPL detection)
- Transitive vulnerability exposure calculation
- FDA SBOM compliance notes
- EU MDR compliance notes
- Actionable recommendations

Analyzer (analyzer.py):
- Complete analysis pipeline
- D3.js-compatible visualization data
- Interactive HTML report generation
- CLI tool: medsec-sbom (analyze, demo, parse commands)

Based on 2025 research on GNN-based vulnerability detection and
FDA/EU MDR SBOM requirements for medical devices.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,8 @@ medsec-traffic-gen = "medtech_ai_security.anomaly.traffic_generator:main"
 medsec-anomaly = "medtech_ai_security.anomaly.detector:main"
 # Adversarial ML CLI tools (Phase 4)
 medsec-adversarial = "medtech_ai_security.adversarial.evaluator:main"
+# SBOM Analysis CLI tools (Phase 5)
+medsec-sbom = "medtech_ai_security.sbom_analysis.analyzer:main"
 
 [project.urls]
 Homepage = "https://github.com/Dashtid/medtech-ai-security"
