feat: add DefectDojo integration and Kubernetes manifests
- Add DefectDojoClient for vulnerability management API v2
- Import SBOM analysis findings and threat intel CVEs to DefectDojo
- Add medsec-defectdojo CLI tool
- Create Kubernetes deployment manifests:
  - Threat intel scanner with CronJobs for NVD/CISA
  - SBOM analyzer service with HPA
  - Anomaly detector service with gRPC support
  - RBAC, NetworkPolicy, PVC, Ingress configurations
- Add 41 tests for DefectDojo client (271 total, 69% coverage)
- Update README with new features and test counts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,8 @@ medsec-anomaly = "medtech_ai_security.anomaly.detector:main"
 medsec-adversarial = "medtech_ai_security.adversarial.evaluator:main"
 # SBOM Analysis CLI tools (Phase 5)
 medsec-sbom = "medtech_ai_security.sbom_analysis.analyzer:main"
+# Integration CLI tools
+medsec-defectdojo = "medtech_ai_security.integration.defectdojo:main"
 
 [project.urls]
 Homepage = "https://github.com/Dashtid/medtech-ai-security"
