--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     # Security/Threat Intelligence (Phase 1)
     "requests>=2.31.0",
     "beautifulsoup4>=4.12.0",
+    "defusedxml>=0.7.1",
     # ML Risk Scoring (Phase 2)
     "scikit-learn>=1.3.0",
     "pandas>=2.0.0",
